pages/Index.module.scss
@import "styles/mixins";

.errorPage {
  display: flex;
  flex-direction: column;
  min-height: calc(100vh - 48px);

  .main {
    align-items: center;
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
    justify-content: center;
  }

  h1 {
    color: $color-alt;
    margin: 0;
    margin-bottom: $spacing-lg;
  }

  small {
    display: block;
    opacity: 0.5;
  }

  li {
    margin: $spacing-sm 0;
  }
}

.title {
  margin-bottom: $spacing-base;
  margin-top: 0;
}

.lists {
  display: grid;
  gap: $spacing-xl;
  grid-template-columns: 2fr 1fr;

  .recentLayouts,
  .popularLayouts {
    ul:global(.layoutsList) {
      display: flex;
      flex-direction: column;
      margin: 0;

      > li {
        display: inline-block;
        width: 100%;
      }

      > li:last-child {
        margin-bottom: 0;
      }
    }
  }

  .recentLayouts {
    ul:global(.layoutsList) {
      column-count: 2;
      display: block;

      > li {
        margin-bottom: $spacing-base;
      }
    }
  }

  @media (max-width: $screen-md) {
    gap: $spacing-lg;
    grid-template-columns: 1fr;

    .popularLayouts ul:global(.layoutsList) {
      column-count: 2;
      display: block;

      > li {
        margin-bottom: $spacing-base;
      }
    }
  }

  @media (max-width: $screen-xs-max) {
    display: block;

    .recentLayouts,
    .popularLayouts {
      ul:global(.layoutsList) {
        column-count: 1;
      }
    }
  }
}

